@@ -1,28 +1,14 @@
 package com.example.tecnosserver.products.mapper;
 
-import com.example.tecnosserver.image.mapper.ImageMapper;
 import com.example.tecnosserver.products.dto.ProductDTO;
 import com.example.tecnosserver.products.model.Product;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class ProductMapper {
 
-    private final ImageMapper imageMapper;
-
-    public ProductMapper(ImageMapper imageMapper) {
-        this.imageMapper = imageMapper;
-    }
-
-    /**
-     * Map a Product entity to a ProductDTO.
-     *
-     * @param product the Product entity
-     * @return the ProductDTO
-     */
     public ProductDTO mapProductToDTO(Product product) {
         if (product == null) {
             return null;
@@ -35,23 +21,19 @@ public class ProductMapper {
                 product.getItemCategory() != null ? product.getItemCategory().getName() : null,
                 product.getCategory() != null ? product.getCategory().getName() : null,
                 product.getSubCategory() != null ? product.getSubCategory().getName() : null,
-                imageMapper.mapImagesToDTOs(product.getImages()),
+                product.getImages(),
+                null,
+                null,
                 product.getBroschure(),
                 product.getTehnic(),
                 product.getLinkVideo(),
                 product.getPartner() != null ? product.getPartner().getName() : null,
                 product.getTags() != null
-                        ? product.getTags().stream().map(tag -> tag.getName()).collect(Collectors.toList())
-                        : List.of() // Map tags to a list of names or return an empty list
+                        ? product.getTags().stream().map(tag -> tag.getName()).toList()
+                        : List.of()
         );
     }
 
-    /**
-     * Map a list of Product entities to a list of ProductDTOs.
-     *
-     * @param products the list of Product entities
-     * @return the list of ProductDTOs
-     */
     public List<ProductDTO> mapProductsToDTOs(List<Product> products) {
         if (products == null || products.isEmpty()) {
             return List.of();
@@ -59,6 +41,6 @@ public class ProductMapper {
 
         return products.stream()
                 .map(this::mapProductToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
